5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1716_2506.log
== TEST (2019-05-09 16:46:46) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: ")
c = int(input("Digite o percentual de crescimento: ")
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 0

while(0 < t <= 12000):
		  t = t + (t*c/100)
		  anos = anos +1
if (t <= 0):
		  msg = "EXTINCAO"
if (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- ERROR:
File "XXXX", line 3
    c = int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:47:12) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: ")
pc = int(input("Digite o percentual de crescimento: ")
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 0

while(0 < t <= 12000):
		  t = t + (t*c/100)
		  anos = anos +1
if (t <= 0):
		  msg = "EXTINCAO"
if (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- ERROR:
File "XXXX", line 3
    pc = int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:47:44) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 0

while(0 < t <= 12000):
		  t = t + (t*c/100)
		  anos = anos +1
if (t <= 0):
		  msg = "EXTINCAO"
if (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    t = t + (t*c/100)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:07) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 0

while(0 < t <= 12000):
		  t = t + (t*pc/100)
		  anos = anos +1
if (t <= 0):
		  msg = "EXTINCAO"
if (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:48:50) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 0

while(0 < t <= 12000):
		  t = t + (t*pc/100)
		  anos = anos + 1
if (t <= 0):
		  msg = "EXTINCAO"
if (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.134065
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
40
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:04) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 1

while(0 < t <= 12000):
		  t = t + (t*pc/100)
		  anos = anos + 1
if (t <= 0):
		  msg = "EXTINCAO"
if (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:50:58) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 1

while(0 < t < 12000):
		  t = t + (t*pc/100)
		  anos = anos + 1
if (t <= 0):
		  msg = "EXTINCAO"
if (t >= 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:53:22) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 1

while(0 < t < 12000):
		anos = anos + 1  
		t = t + (t*pc/100)
		 
if (t <= 0):
		  msg = "EXTINCAO"
if (t >= 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:54:21) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
		t = t + (t*pc/100)
		anos = anos + 1
		
if (t <= 0):
		  msg = "EXTINCAO"
if (t >= 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:54:36) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
		t = t + (t*pc/100)
		anos = anos + 1
		
if (t <= 0):
		  msg = "EXTINCAO"
if (t >= 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.217813
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
42
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
12
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:54:55) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
		t = t + (t*pc/100)
		anos = anos + 1
		
if (t < 0):
		  msg = "EXTINCAO"
if (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:55:11) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
		t = t + (t*pc/100)
		anos = anos + 1
		
if (t < 0):
		  msg = "EXTINCAO"
if (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.141428
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
42
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
12
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:55:26) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
		t = t + (t*pc/100)
		anos = anos + 1
		
if (t < 0):
		  msg = "EXTINCAO"
elif (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:55:38) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
		t = t + (t*pc/100)
		anos = anos + 1
		
if (t < 0):
		  msg = "EXTINCAO"
elif (t > 12000):
		  msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.166227
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
42
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
12
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:03:03) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t < 0):
	msg = "EXTINCAO"
elif (t > 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:03:36) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t < 0):
	msg = "EXTINCAO"
elif (t > 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.181165
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
42
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
12
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:04:12) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t >= 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:04:32) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t >= 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.136101
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
42
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
12
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:04:41) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(0 < t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t > 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.169357
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
42
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
12
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:28:32) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(t > 0 and t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t > 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:29:01) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 2

while(t > 0 and t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t > 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.162294
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
42
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
12
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:30:11) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 1

while(0 < t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t >= 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.151522
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
41
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:33:33) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 1
while(0 < t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t >= 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:45:57) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 1
while(0 < t < 12000):
	t = t + (t*pc/100)
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t >= 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
LIMITE
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:47:17) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 1
while(0 < t < 12000):
	t = t + (t*pc/100)-qv
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t >= 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
EXTINCAO
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:47:43) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 0
while(0 < t < 12000):
	t = t + (t*pc/100)-qv
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t >= 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:48:04) 
-- CODE:
#Entrada dos tambaquis, crescimento e venda:
t = int(input("Digite a quantidade inicial de tambaquis no tanque: "))
pc = float(input("Digite o percentual de crescimento: "))
qv = int(input("Digite a quantidade retirada para venda: "))		  
		  
anos = 0
while(0 < t < 12000):
	t = t + (t*pc/100)-qv
	anos = anos + 1
		
if (t <= 0):
	msg = "EXTINCAO"
elif (t >= 12000):
	msg = "LIMITE"
print(msg)
print(anos)		  
		  
		  
		  
-- EXECUTION TIME:
0.159135
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
